fixed scrollbar feedback issue

--- a/assets/admin/css/admin.css
+++ b/assets/admin/css/admin.css
@@ -796,6 +796,18 @@ p + .ha-review-notice__actions {
 	-webkit-box-shadow: 0 4px 100px rgba(0, 0, 0, .05);
 	        box-shadow: 0 4px 100px rgba(0, 0, 0, .05);
 }
+.ha-template-element-modal .modal__container ::-webkit-scrollbar {
+	width: 8px;
+}
+.ha-template-element-modal .modal__container ::-webkit-scrollbar-track {
+	background: #f7f7fa;
+}
+.ha-template-element-modal .modal__container ::-webkit-scrollbar-thumb {
+	background: rgba(136, 136, 136, .6588235294);
+}
+.ha-template-element-modal .modal__container ::-webkit-scrollbar-thumb:hover {
+	background: rgba(85, 85, 85, .5607843137);
+}
 .ha-template-element-modal .modal__header {
 	display: -webkit-box;
 	display: -webkit-flex;
@@ -880,7 +892,7 @@ p + .ha-review-notice__actions {
 	content: "✕";
 }
 .ha-template-element-modal .modal__content {
-	overflow: scroll;
+	overflow: auto;
 	-webkit-box-sizing: border-box;
 	        box-sizing: border-box;
 	margin: auto;
@@ -889,6 +901,8 @@ p + .ha-review-notice__actions {
 	width: 100%;
 	height: 750px;
 	line-height: 1.5;
+
+	scrollbar-color: red yellow;
 }
 .ha-template-element-modal .modal__content .form-data {
 	margin: auto;
